2012-09-03  Axel Roebel  <roebel@m1873.local>
Version 1.4.19

	* swig/easdif-common-init.i, swig/numpy.i, python/CMakeLists.txt,
	* swig/python/easdif-python.i :
	Added support for using numpy  arrays to Set/Get columns and rows from
	matrices. For large matrices this can increase efficiency when accessing
	matrix data by factor ~1000!

	* python/CMakeLists.txt :
	Added support for using numpy  arrays to Set/Get columns and rows from
	matrices. For large matrices this can increase efficiency when accessing
	matrix data by factor ~1000!

	Fixed linker options for pythonswig build system on mac os x.

	* swig/python/setup2.py.in :
	Added support for using numpy  arrays to Set/Get columns and rows from
	matrices. For large matrices this can increase efficiency when accessing
	matrix data by factor ~1000!

	setup2.py.in implements a purely pyhton distutils based pythonswig
	build implementation which does, hower nor support intel icl
	compiler which is why I stay with the cmake based version

	* easdif/sdif_matrix.hpp:
	Fixed confusing argument names.

2012-08-29  Axel Roebel  <roebel@m1873.local>
Version 1.4.18

	* swig/python/easdif-python.i :
	Fixed next iterator for sdifentity.

	* easdif/sdifentity.hpp :
	Renamed function arguments to avoid compiler warnings in swig python interface.
	Enhanced documentation of ReadNextSelectedFrame()

	* easdif/sdifentity.cpp :
	Fixed last fix, avoid using frame iterators that point to FrameDirectory.end().

	* easdif/sdif_matrix.hpp:
	Renamed function arguments to avoid compiler warnings in swig python interface.

2012-08-10  Axel Roebel  <roebel@m1873.local>
Version 1.4.17

	* easdif/sdifentity.hpp, easdif/sdifentity.cpp :
	Fixed ReadNextSelectedFrame with time argument when reading with
	time set equal to or before the time of the first frame.
	Added new function to fill the frame directory.

2012-01-05  Axel Roebel  <roebel@m1873.local>
Version 1.4.16

	* swig/python/easdif-python.i:
	Fixed memory leak during use of iterables.